# python-sync-async

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
async/: app.py
sync/: app.py
