[tool.poetry]
name = "python-async-io"
version = "0.1.0"
description = "Example Python sync and async servers"
authors = ["Antonis Kalipetis <akalipetis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
flask = "^1.1.2"
uvicorn = {extras = ["standard"], version = "^0.12.2"}
starlette = "^0.13.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
